--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ section {
   font-size: 3.5rem;
   color: var(--black);
   line-height: 1.8;
+  text-align: center;
 }
 
 .about .row .content h3 span {
